--- a/config.yaml
+++ b/config.yaml
@@ -53,7 +53,7 @@ active_directory:
 vm_distribution:
   domain_controller:
     name: "SHIELD-HQ"
-    node: "pve1"  # Primary node
+    node: "proxmox1"  # Primary node
     memory: 4096
     cores: 2
     storage: "local-lvm"
@@ -69,7 +69,7 @@ vm_distribution:
 
   vm1:  # External-facing VM
     name: "STARK-TOWER"
-    node: "pve2"  # Secondary node for load distribution
+    node: "proxmox2"  # Secondary node for load distribution
     memory: 4096
     cores: 2
     storage: "local-lvm"
@@ -85,7 +85,7 @@ vm_distribution:
 
   vm2:  # Dual-NIC VM
     name: "SANCTUM"
-    node: "pve1"  # Primary node with DC for better internal communication
+    node: "proxmox1"  # Primary node with DC for better internal communication
     memory: 4096
     cores: 2
     storage: "local-lvm"
