Enhance network configuration in AD environment setup by switching to SSH commands for bridge and VLAN creation, and update API token privilege requirement in config.yaml.

--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ proxmox:
       external_interface: "eth0"  # Physical interface for external network
   user: "root@pam"
   token_name: "adtoken-lab"
-  token_value: ""  # Add your API token here
+  token_value: ""  # Add your API token here - MUST have Sys.Modify privilege
   verify_ssl: false
 
 # Network Configuration
