Enhance ISO file handling in create_ad_environment.py by adding verification for required ISO files before VM creation. Introduce helper methods for formatting ISO paths and improve logging for better debugging. Update comments in config.yaml for clarity on ISO configuration.

--- a/config.yaml
+++ b/config.yaml
@@ -101,9 +101,9 @@ vm_distribution:
 
 # Windows ISO and Template Configuration
 windows:
-  iso_storage: "local"
-  iso_file: "Windows_Server_2022_EVAL.iso"
-  virtio_iso: "virtio-win.iso"
+  iso_storage: "local"  # Storage location for ISOs (usually 'local')
+  iso_file: "Windows_Server_2022_EVAL.iso"  # Windows Server ISO filename
+  virtio_iso: "virtio-win.iso"  # VirtIO drivers ISO filename
 
 # User Configuration
 users:
